--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-flash-message": "^0.7.2",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-underscore": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
